<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnLogin"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:iconTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassword"
        app:rippleColor="#003F51B5" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tvWelcome"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailMain"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textEmailAddress"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textColorHighlight="#00FAFAFA"
        android:textColorHint="#3F51B5"
        android:textColorLink="#3F51B5"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

    <EditText
        android:id="@+id/PasswordMain"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#3F51B5"
        android:textColorHighlight="#00FAFAFA"
        android:textColorHint="#3F51B5"
        android:textColorLink="#3F51B5"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailMain" />

    <Button
        android:id="@+id/Anonymous"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnAnonymous"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Or" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnGmail"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Anonymous" />

    <TextView
        android:id="@+id/Or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvOr"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <Button
        android:id="@+id/Facebook"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnFacebook"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

    <TextView
        android:id="@+id/RegisterMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tvRegister"
        android:textColor="#B60D0D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Facebook" />

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvForgotPassword"
        android:textAllCaps="false"
        android:textColor="#B60D0D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordMain" />

</androidx.constraintlayout.widget.ConstraintLayout>