<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <Button
        android:id="@+id/Register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnReg"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:iconTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword"
        app:rippleColor="#003F51B5" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/hintConfirmPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#3F51B5"
        android:textColorHighlight="#00FAFAFA"
        android:textColorHint="#3F51B5"
        android:textColorLink="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordR" />

    <EditText
        android:id="@+id/PasswordR"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:textColor="#3F51B5"
        android:textColorHighlight="#00FAFAFA"
        android:textColorHint="#3F51B5"
        android:textColorLink="#3F51B5"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/FullName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/hintFullName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textColorHighlight="#00FAFAFA"
        android:textColorHint="#3F51B5"
        android:textColorLink="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registertv" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#3F51B5"
        android:textColorHighlight="#00FAFAFA"
        android:textColorHint="#3F51B5"
        android:textColorLink="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullName" />

    <TextView
        android:id="@+id/Registertv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tvReg"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>