<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".mainPage">

    <Button
        android:id="@+id/registerbtnMP"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="152dp"
        android:background="#040000"
        android:backgroundTint="#000000"
        android:text="@string/btnRegisterMP"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toEndOf="@+id/userNameShow"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#040000"
        android:backgroundTint="#000000"
        android:text="@string/mainPageButton"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/mainPageUser"
        android:textColor="#FAF6F6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/logOut"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>