<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnResetPassword"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:iconTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail"
        app:rippleColor="#003F51B5" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/hintEnterEmail"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textEmailAddress"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textColorHighlight="#00FAFAFA"
        android:textColorHint="#3F51B5"
        android:textColorLink="#3F51B5"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/forgotPassword"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>